--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.17",
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
+    "antd": "^3.25.1",
     "availity-reactstrap-validation": "2.5.1",
     "axios": "0.19.0",
     "bootstrap": "4.3.1",
