公共文件部分前后端全部完成并对接完毕

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -95,6 +95,10 @@ spring:
   mvc:
     favicon:
       enabled: false
+  servlet:
+    multipart:
+      maxFileSize: '1000MB'
+      maxRequestSize: '10000MB'
   task:
     execution:
       thread-name-prefix: teachermanager-task-
