--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     },
     "importHelpers": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": ["src/main/webapp/app", "src/test/javascript/spec"],
   "exclude": ["node_modules"]
